--- a/HW5/styles2.css
+++ b/HW5/styles2.css
@@ -22,30 +22,40 @@ body{
 
 .text-help{
     color:rgba(173, 147, 0, 0.993);
-    font-size:18px;
+    font-size:15px;
 }
 
 .text-cap{
     font-size:30px;
     color:white;
+    padding-top:20px;
 }
 
 .container-in{
     background-color: white;
-    width:380px;
-    height:300px;
+    width:420px;
+    height:370px;
     display:inline-block;
-    margin-top:-80px;
+    
 }
 
 .text-inside{
     color:black;
-    padding-top:30px;
-    padding-left:20px;
-    padding-right:20px;
+    padding-top:50px;
+    padding-left:40px;
+    padding-right:40px;
 }
 
 .text-deep{
     font-weight: bold;
     font-size:20px;
+}
+
+.text-pod{
+    padding-top:25px;
+    padding-bottom:28px;
+}
+
+.icon{
+    padding-left:20px;
 }
