--- a/HW6/style2.css
+++ b/HW6/style2.css
@@ -5,3 +5,41 @@ body{
 .text-black{
     color:black;
 }
+
+.bg-blue{
+    background-color: rgb(42, 42, 61);
+    width:100%;
+    height: 150px;
+}
+
+.bg-orange{
+    background-color: rgb(253, 96, 68);
+    width:100px;
+    height: 400px;
+    padding-top: 20px;
+    margin-left: 65%;
+}
+
+.bg-white{
+    background-color: white;
+    width:230px;
+    height: 200px;
+}
+
+.container-img{
+    width:fit-content;
+}
+
+.img{
+    width: 300px;
+    height: auto;
+    padding-top: -600px;
+}
+
+.absolute{
+    position:absolute;
+}
+
+.relative{
+    position: relative;
+}
