--- a/HW6/style2.css
+++ b/HW6/style2.css
@@ -9,21 +9,9 @@ body{
 .bg-blue{
     background-color: rgb(42, 42, 61);
     width:100%;
-    height: 150px;
-}
-
-.bg-orange{
-    background-color: rgb(253, 96, 68);
-    width:100px;
-    height: 400px;
-    padding-top: 20px;
-    margin-left: 65%;
-}
-
-.bg-white{
-    background-color: white;
-    width:230px;
-    height: 200px;
+    height: 130px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .container-img{
@@ -31,15 +19,56 @@ body{
 }
 
 .img{
-    width: 300px;
+    width: 580px;
     height: auto;
-    padding-top: -600px;
+    position: absolute;
+    margin-top: -50px;
+    margin-left: 427px;
+    border-radius: 10px;
+}
+.bg-orange{
+    background-color: rgb(253, 96, 68);
+    width:150px;
+    height: 500px;
+    margin-top: -80px;
+    margin-left: 65%;
+    border-radius: 10px;
+    position: absolute;
 }
 
-.absolute{
-    position:absolute;
+.text-box{
+    background-color: white;
+    color: black;
+    height: 180px;
+    width: 260px;
+    margin-top: 260px;
+    margin-left: 390px;
+    border-radius: 10px;
+    position: absolute;
 }
 
-.relative{
-    position: relative;
+.text-meal{
+    margin-top: 20px;
+    margin-left:20px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 75%;
+    color: rgb(40, 40, 56);
 }
+
+.text-how{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left:20px;
+    margin-right:30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 178%;
+    font-weight: bold;
+    color: rgb(40, 40, 56);
+}
+
+.text-freepik{
+    font-family: 'Roboto', sans-serif;
+    margin-left:20px;
+    color: rgb(40, 40, 56);
+}
+
