--- a/HW6/style2.css
+++ b/HW6/style2.css
@@ -10,8 +10,10 @@ body{
     background-color: rgb(42, 42, 61);
     width:100%;
     height: 130px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: -8px;
+    margin-right: -16px;
+    margin-top: -8px;
+
 }
 
 .container-img{
