--- a/HW8/style1hw8.css
+++ b/HW8/style1hw8.css
@@ -2,6 +2,8 @@ body{
     background-color: white;
 }
 
+
+
 .inline-block{
     display: inline-block;
 }
@@ -17,41 +19,81 @@ body{
 
 .container{
     text-align: center;
-    padding-top: 46px;
+    padding-top: 25px;
 }
 
 .item-left{
-    width: 360px;
-    height: 260px;
-}
-
-.item-center{
-    width: 360px;
-    height: 260px;
-    margin-left: 35px;
-    margin-right: 35px;
-}
-
-.item-right{
-    width: 360px;
-    height: 260px;
-}
-
-.item-center img{
-    max-height:100%;
-    transition: all 0.2s;
+    height: 300px;
+    width: 400px;
     overflow: hidden;
 }
 
 .item-left img{
-    max-height:100%;
+    height: 300px;
+    width: 400px;
+    transform: scale(0.5);
+    transition:1s;
+    border-radius: 10px;
+    margin-top: -100px;
+}
+
+.item-center img{
+    height: 300px;
+    width: 400px;
+    margin-left: 15px;
+    margin-right: 15px;
     transition: all 0.2s;
     overflow: hidden;
+    border-radius: 10px;
+    max-height:100%;
 }
 
 .item-right img{
-    max-height:100%;
+    height: 300px;
+    width: 400px;
     transition: all 0.2s;
     overflow: hidden;
+    border-radius: 10px;
+    max-height:100%;
 }
+
+.relative{
+    position: relative;
+}
+
+.text-left{
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+}
+
+.text-center{
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    
+}
+
+.text-right{
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    
+}
+
+.item-left:hover img{
+    transform: scale(1.2);
+}
+
+.item-center:hover img{
+    transform: scale(1.2);
+}
+
+.item-right:hover img{
+    transform: scale(1.2);
+}
+
 
