--- a/HW8/style1hw8.css
+++ b/HW8/style1hw8.css
@@ -26,23 +26,36 @@ body{
     height: 300px;
     width: 400px;
     overflow: hidden;
+    border-radius: 10px;
+}
+
+.item-center{
+    height: 300px;
+    width: 400px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.item-right{
+    height: 300px;
+    width: 400px;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .item-left img{
     height: 300px;
     width: 400px;
-    transform: scale(0.5);
     transition:1s;
     border-radius: 10px;
-    margin-top: -100px;
 }
 
 .item-center img{
     height: 300px;
     width: 400px;
-    margin-left: 15px;
-    margin-right: 15px;
-    transition: all 0.2s;
+    margin-left: 0px;
+    margin-right: 10px;
+    transition: 1s;
     overflow: hidden;
     border-radius: 10px;
     max-height:100%;
@@ -51,7 +64,7 @@ body{
 .item-right img{
     height: 300px;
     width: 400px;
-    transition: all 0.2s;
+    transition: 1s;
     overflow: hidden;
     border-radius: 10px;
     max-height:100%;
@@ -62,25 +75,29 @@ body{
 }
 
 .text-left{
-    font-size: 30px;
+    font-size: 25px;
     color: white;
     font-weight: bold;
     position: absolute;
+    margin-top: -140px;
+    margin-left: 15px;
 }
 
 .text-center{
-    font-size: 30px;
+    font-size: 25px;
     color: white;
     font-weight: bold;
     position: absolute;
-    
+    margin-top: -140px;
 }
 
 .text-right{
-    font-size: 30px;
+    font-size: 25px;
     color: white;
     font-weight: bold;
     position: absolute;
+    margin-top: -140px;
+    margin-left: 15px;
     
 }
 
@@ -95,5 +112,3 @@ body{
 .item-right:hover img{
     transform: scale(1.2);
 }
-
-
